fix bug with selecting object and initing viewer; ensure thumbnail image always covers image area

--- a/client/views/objects/objects.import.less
+++ b/client/views/objects/objects.import.less
@@ -121,6 +121,7 @@
     position:relative;
     height:240px;
 		overflow:hidden;
+		background:@dark-theme-ipad-3;
 
 		.object-catalog-n {
 			position:absolute;
@@ -152,18 +153,47 @@
 
 		}
 
-    img {
+    .object-detail-thumbnail {
       width:100%;
-      z-index:2;
+			height:100%;
+      z-index:1;
       opacity:1;
       transition: opacity 100ms ease-out;
-      position:relative;
+      position:absolute;
+			object-fit:cover;
+			background-size:cover;
+			background-position:center;
 
 			&.default {
-				opacity:0.9;
+				opacity:0.95;
+				object-fit:normal;
 				.blur(2px);
 			}
     }
+
+		.default-image-text {
+			position:absolute;
+			top:0;
+			left:0;
+			width:100%;
+			text-align:center;
+			padding:90px 10px 0;
+			z-index:3;
+			opacity:0;
+			.transition(all 300ms ease-out);
+
+			&.default-image-text-visible {
+				opacity:0.3;
+			}
+
+			span {
+				font-family:@font-reading;
+				font-size:20px;
+				font-weight:light;
+				color:@dark;
+			}
+
+		}
 
   }
 
@@ -435,14 +465,64 @@
 
 }
 
-.objects-detail-slider {
+.objects-detail-slider, .objects-detail-scroll {
 	width:100%;
 	background:@dark-theme-ipad-3;
-	padding:10px 0 1px;
+	padding:10px 10px 1px;
 }
-.objects-detail-slider-inner {
-	width:95%;
+.objects-detail-slider-inner, .objects-detail-scroll-inner {
+	width:100%;
 	margin:0 auto;
+}
+
+.objects-detail-scroll {
+	height:310px;
+	overflow-x: scroll;
+	overflow-y:hidden;
+
+	.objects-detail-scroll-inner {
+		white-space:nowrap;
+
+	}
+
+	.object-scroll-teaser {
+		display:inline-block;
+		vertical-align: top;
+
+	}
+
+	.object-teaser {
+		margin:0px 5px;
+		.object-teaser-wrap {
+			width:300px;
+			height:275px;
+
+		}
+
+
+		.object-thumbnail-wrap {
+			height:150px;
+		}
+
+		.object-text-wrap {
+			white-space:normal;
+
+			.object-teaser-subtitle {
+				display:none;
+			}
+
+			p {
+				display:none;
+			}
+
+		}
+
+		.meta-items {
+			display:none;
+		}
+
+	}
+
 }
 
 // search toolbar
